# obs-infra

./: .gitignore  README.md  docker-compose.yml  makefile
docker/: README.md
docker/localstack/: init-aws.sh
docker/prometheus/: prometheus.yml
docker/test-runner/: Dockerfile
src/security/: compliance_scanner.py
src/tests/: eks_integration_test.py
terraform/: README.md  main.tf  variables.tf
terraform/modules/amg/: main.tf  outputs.tf  variables.tf
terraform/modules/amp/: main.tf  outputs.tf  variables.tf
terraform/modules/cost_dashboard/: main.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
test-suite/: README.md  pyproject.toml  requirements.txt
test-suite/src/: cli.py  test-runner.py
test-suite/src/data_generator/: prometheus_metrics.py
test-suite/src/fuzz/: api-fuzzer.py
test-suite/src/security/: __init__.py
